style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    padding: 0%;
    margin:0;
    font-family:'poppins',sans-serif ;
    box-sizing: border-box;
}

html{
    overflow-x:hidden;
}

body{
    width:100%;
    height:100vh;
    overflow:hidden;
    background: linear-gradient(to right,rgb(255,255,255),rgb(254,215,173));
}
 
nav{
    width: 100%;
    height: 10vh;
    position: sticky;
}

.nav-container{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content:space-evenly;
    align-items: center;
}

.logo{
    color:black;
    font-size: 2rem;
    font-weight:bolder;
}
.logo span{
    color:rgb(109,67, 0);
    text-shadow: 0 0 10px rgb(109,67,0);
    margin: 0 ;
    padding: 15px 20px;
    margin: top 0.5em;;
}

.hamburg,.cancel{
    cursor:pointer;
    position: absolute;
    right: 15px;
    top: 10px;
    color:black;
    font-size: 2rem;
    display:none;
}
.nav-container .links{
    display:flex;
    gap:3rem;
    align-items: center;
}

.nav-container .links a{
    position: relative;
    font-size: 1.2rem;
    color: black;
    text-decoration:none;
    font-weight:550;
    transform: 0.3s linear;
}

.nav-container .links a::before{
    position: absolute;
    content:"";
    bottom:-3px;
    left: 0;
    width:0%;
    height:3px;
    background-color:rgb(109,67,0);
    transition: 0.2s linear;
}

.nav-container .links a:hover::before{
    width: 100%;
}

.nav-container .contact-btn{
    background-color:rgb(109,67, 0);
    padding:5px 25px;
    border-radius: 20px;
    border: 2px solid rgb(109,67,0);
    transition: 0.2s linear;
}

.nav-container .contact-btn a{
    color:white;
    transition: 0.3s linear;
}

.nav-container .contact-btn:hover,.nav-container .contact-btn:hover a{
    background-color: rgb(109,67, 0);
    color: white;
}

.nav-container .links a:hover{
    color:rgb(109,67, 0);
}

.dropdown-links{
    z-index:100;
    position:absolute;
    top:0;
    transform:translateY(-500px);
    width:100%;
    height:auto;
    backdrop-filter:brightness(40%) blur(3px);
    box-shadow: 0 0 20px black;
    transition: 0.2 s linear;
}

.dropdown-links .links a{
    color:white;
    display:flex;
    text-decoration:none;
    justify-content:center;
    padding: 15px 0;
    align-items:center;
    transition: 0.2s linear;
}

.dropdown-links .links a:hover{
    background-color:rgb(109,67, 0) ;
}

section{
    width: 100%;
    height: 90vh;
}

.main-container{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content:space-evenly;
    align-items:center;
}

.main-container .image{
    z-index: -1;
    width:30%;
}

.main-container .image img{
    width:100%;
}

.main-container .content{
    color:#222;
    width:40%;
    min-height: 100px;
}

.content h1{
    font-size:clamp(1rem,2rem + 5vw ,3rem);
    text-align: center;
    margin:0;
    line-height:1.2;
} 

.content h1 span{ 
    color: rgb(109,67, 0);
    text-shadow: 0 0 10px rgb(109,67, 0);
}
.content h1+h1{
    margin-top:0.2rem;
}

.content h2 {
     text-align:center;
     margin-bottom:0.2rem;
}

.mobile-break{
    display: none;
}

.role-title{
    margin-bottom: 1.5rem;
}

.content p{
    font-size:16px;
    margin-top: 0.5rem;;
}
.social-links{
    display: flex;
    justify-content:flex-start;
}

.social-links i{
    display:inline-flex;
    justify-content:center;
    align-items:center;
    width:3rem;
    height:3rem;
    background-color:transparent;
    border: 0.2rem solid rgb(109,67, 0);
    border-radius: 50%;
    color: rgb(109,67, 0);
    margin:5px 10px;
    font-size:1.5rem;
    transition:0.2s linear;
    margin-top:0.8rem;
}

.social-links i:hover{
    scale: 1.3;
    color: white;
    background-color:rgb(109,67, 0);
    filter: drop-shadow(0 0 10px rgb(109,67,0));
}

@media(max-width:600px){
    body{
        overflow-y: visible;
    }
    nav.logo{
        position: absolute;
        top:16px;
        left:15px;
        font-size: 1.5rem;
    }
    .main-container{
        display: flex;
        flex-direction: column;
    }
    .nav-container .links{
        display:none;
    }
    .hamburg,.cancel{
        display: block;
    }
    .main-container .content{
        width: 80%;
    }
    .social-links{
        justify-content:center;
    }
    .social-links i{
        width: 2.5rem;
        height: 2.5rem;
        font-size:1.5rem;
    }  
    .mobile-break{
        display: inline;
    }
    .role-title{
        font-size: 1.2rem;
        text-align: center;

    }
    .cancel{
        color: white;
    }
    .main-container.image img{
        width: 250px;
        margin-bottom: 0px;
        height: auto;
        max-width: 100%;
        display: block;
        margin: 0 auto;
    }
}

